cambio de enlace a boton Nosotros a seccion Productos

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="cnt-bttn">
-					<a href="#productos" class="bttn">Conoce Nuestos Productos</a>
+					<a href="/Projects/BakeryBake/views/productos.html" class="bttn">Conoce Nuestos Productos</a>
 				</div>	
 			</div>
 		</div>
