- Cambie el logo, le agregue animacion, puse link al index - Agregue la clase selected para los items del header, les puse el hover state - Defini y agregue un background pattern para las secciones - Agregue background color al header - Agregue footer a todos los html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 	<header>
 		<div class="main-nav">
-			<img src="./images/logo.png" alt="logo" width="3.5%">
+			<a href="#"><img src="./images/logo.png" class="main-nav__logo" alt="logo"></a>
 
 			<nav class="main-nav__list">
 				<ul class="main-nav__item">
-					<li class="main-nav__link"><a href="#nosotros">NOSOTROS</a></li>
+					<li class="main-nav__link"><a class="selected" href="#nosotros">NOSOTROS</a></li>
 					<li class="main-nav__link"><a href="./views/productos.html">PRODUCTOS</a></li>
 					<li class="main-nav__link"><a href="./views/servicios.html">SERVICIOS</a></li>
 					<li class="main-nav__link"><a href="./views/promos.html">PROMOS</a></li>
@@ -38,7 +38,7 @@
 	</section>
 
 	<section id="nosotros">
-		<div class="bgNosotros">
+		<div class="bgNosotros bg-pattern">
 			<div class="cntImg">
 				<img src="./images/chelsea.jpg" alt="chelsea" class="img">
 				<img src="./images/making-cupcakes.jpg" alt="making-cupcakes" class="img img2">
