- Agregue Carousel al index con 3 imagenes.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,29 @@
 	
 	<section id="home">
 		<div class="cntHome">
-			<div class="cntHome__box">
-				<h1>BAKERY <span>Bake</span></h1>
-				<p class="text textItalic">Siendo complices de tus festejos desde 2002</p>
+			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active carouselItem carouselItem1"></div>
+					<div class="carousel-item carouselItem carouselItem2"></div>
+					<div class="carousel-item carouselItem carouselItem3"></div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+				<div class="cntHome__box">
+					<h1>BAKERY <span>Bake</span></h1>
+					<p class="text textItalic">Siendo complices de tus festejos desde 2002</p>
+				</div>
 			</div>
 		</div>
 	</section>
