--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 	<title>Bakery Bake</title>
 </head>
 
