- Arreglos generales de estilo: *Seccion Contacto:  - Correccion de colores  - Aplique Flex al formulario de contacto
 * Header:
  - Aplicacion de SASS

* Seccion Home :
 - Aplicacion de SASS

* Seccion Productos :
 - Agregue z-index a la grilla para que el texto se vea por delante del fondo

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
 	<section id="nosotros">
 		<div class="bgNosotros bg-pattern">
-			<div class="cntImg">
-				<img src="./images/chelsea.jpg" alt="chelsea" class="img">
-				<img src="./images/making-cupcakes.jpg" alt="making-cupcakes" class="img img2">
+			<div class="bgNosotros__cntImg">
+				<img src="./images/chelsea.jpg" alt="chelsea" class="item ">
+				<img src="./images/making-cupcakes.jpg" alt="making-cupcakes" class="item  item--alt">
 			</div>
 			
-			<div class="cntNosotros">
+			<div class="bgNosotros__cntNosotros">
 				<h2>WE ARE <br> BAKERY BAKE!</h2>
 				 
 				<div class="cntNosotros-description">
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 				<div class="cnt-bttn">
-					<a href="/Projects/BakeryBake/views/productos.html" class="bttn">Conoce Nuestos Productos</a>
+					<a href="./views/productos.html" class="bttn">Conoce Nuestos Productos</a>
 				</div>	
 			</div>
 		</div>
